# software-as-content-sdk

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  main.py  mcp-key.pem  pyproject.toml  server.json
docs/: architecture.md  embedding.md  example_scenarios.md  frontend-integration.md  mcp.md
examples/: conversation.py  custom_provider.py  quickstart.py  streaming.py
examples/agents/: README.md
examples/agents/data-analysis-agent/: README.md
examples/agents/internal-ops-agent/: README.md
examples/agents/personal-assistant/: README.md
examples/agents/research-agent/: README.md
integrations/claude-code/: README.md
integrations/codex/: README.md  SKILL.md
integrations/openclaw/: README.md  SKILL.md
scripts/: serve.sh
src/sac/: __init__.py  _skills.py  cli.py  client.py  conversation.py  sac.py  types.py
src/sac/agent/: __init__.py  agent.py  legacy.py
src/sac/agent/prompts/: __init__.py  search.py
src/sac/builtin/: __init__.py  agent.py  legacy.py
src/sac/builtin/prompts/: __init__.py  intent.py
src/sac/pipeline/: __init__.py  events.py  evolve.py  generate.py
src/sac/prompts/: __init__.py  app.py  growth.py  judge.py  search.py
src/sac/prompts/templates/: design-system.md
src/sac/providers/: __init__.py  base.py  tavily.py
src/sac/renderer/: preview.html  sac-renderer.js
src/sac/renderer/design-systems/default/: prompt.md  shim.js
src/sac/runtime/: producer.py
src/sac/runtime/pipeline/: __init__.py  _diff.py  _diff_filter.py  _tsx_filter.py  evolve.py  generate.py
src/sac/runtime/prompts/: __init__.py  app.py  classify.py  data.py  growth.py  search.py
src/sac/runtime/providers/: __init__.py  anthropic.py  openrouter.py
src/sac/runtime/store/: __init__.py  base.py  file.py  memory.py
src/sac/server/: http.py  mcp.py
src/sac/server/http/: __init__.py  http.py
src/sac/server/http/callbacks/: __init__.py  codex.py  manager.py  openclaw.py
src/sac/server/http/static/: index.css  index.html  index.js
src/sac/server/mcp/: __init__.py  mcp.py
src/sac/server/static/: index.html  preview.html
src/sac/store/: __init__.py  base.py  memory.py
