[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sac-sdk"
version = "0.1.0"
description = "Software as Content — an open-source Python SDK that gives any AI agent the ability to generate and evolve interactive UI through conversation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Software as Content" },
]
keywords = ["sac", "genui", "ai", "agent", "ui-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.0",
]
all = [
    "sac-sdk[server]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
sac = "sac.cli:main"

[project.urls]
Homepage = "https://github.com/anthropics/sac-sdk"
Documentation = "https://github.com/anthropics/sac-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/sac"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
