[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sac-sdk"
version = "0.1.0"
description = "Software as Content — Conversations that produce evolving software. An open-source Python SDK that gives any agent the ability to generate and evolve interactive apps through conversation."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Mulong Xie", email = "mulong@mulongxie.me" },
]
maintainers = [
    { name = "Dynsoft Lab" },
]
keywords = ["sac", "software-as-content", "genui", "agent", "ui-generation", "dynamic-software", "human-agent-interaction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.0",
]
mcp = [
    "mcp>=1.0",
]
all = [
    "sac-sdk[server,mcp]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
sac = "sac.cli:main"

[project.urls]
Homepage = "https://sac.dynsoft.ai"
Repository = "https://github.com/Software-As-Content/software-as-content-sdk"
Documentation = "https://github.com/Software-As-Content/software-as-content-sdk#readme"
Issues = "https://github.com/Software-As-Content/software-as-content-sdk/issues"
Paper = "https://arxiv.org/abs/2603.21334"

[tool.hatch.build.targets.wheel]
packages = ["src/sac"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120
